// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: SummaryPage should handle modal toggle 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <div>
    <Component
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
    />
    <Component
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
    />
    <Panel
      accent={true}
      title="Plan Overview"
    >
      <Panel.Section>
        <PlanSummary
          label="Your Plan"
          plan={Object {}}
        />
      </Panel.Section>
    </Panel>
    <Component />
    <Component />
    <Modal
      open={true}
    >
      <WindowEvent
        event="keydown"
        handler={[Function]}
      />
      <Connect(ReduxForm)
        onCancel={[MockFunction]}
      />
    </Modal>
  </div>
</Page>
`;

exports[`Page: SummaryPage should not render billing and ips if on free plan 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <div>
    <Component
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
    />
    <Component
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
    />
    <Panel
      accent={true}
      title="Plan Overview"
    >
      <Panel.Section
        actions={
          Array [
            Object {
              "Component": [Function],
              "content": "Upgrade Now",
              "to": "/account/billing/plan",
            },
          ]
        }
      >
        <PlanSummary
          label="Your Plan"
          plan={
            Object {
              "isFree": true,
            }
          }
        />
      </Panel.Section>
    </Panel>
    <Component />
    <Component />
    <Modal
      open={false}
    >
      <WindowEvent
        event="keydown"
        handler={[Function]}
      />
    </Modal>
  </div>
</Page>
`;

exports[`Page: SummaryPage should render banner when manually billed 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <ManuallyBilledBanner
    account={
      Object {
        "subscription": Object {
          "self_serve": false,
        },
      }
    }
  />
</Page>
`;

exports[`Page: SummaryPage should render billing and dedicated IP summary if allowed to purchase ip 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <div>
    <Component
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
    />
    <Component
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
    />
    <Panel
      accent={true}
      title="Plan Overview"
    >
      <Panel.Section
        actions={
          Array [
            Object {
              "Component": [Function],
              "content": "Change Plan",
              "to": "/account/billing/plan",
            },
          ]
        }
      >
        <PlanSummary
          label="Your Plan"
          plan={
            Object {
              "isFree": false,
            }
          }
        />
      </Panel.Section>
      <DedicatedIpSummarySection
        onClick={[Function]}
        plan={
          Object {
            "isFree": false,
          }
        }
      />
    </Panel>
    <Panel
      title="Billing"
    >
      <Panel.Section
        actions={
          Array [
            Object {
              "content": "Update Payment Information",
              "onClick": [Function],
            },
          ]
        }
      >
        <CardSummary
          billing={Object {}}
          label="Credit Card"
        />
      </Panel.Section>
      <Panel.Section
        actions={
          Array [
            Object {
              "content": "Update Billing Contact",
              "onClick": [Function],
            },
          ]
        }
      >
        <LabelledValue
          label="Billing Contact"
        >
          <h6>
             
          </h6>
          <p />
        </LabelledValue>
      </Panel.Section>
    </Panel>
    <Component />
    <Component />
    <Modal
      open={false}
    >
      <WindowEvent
        event="keydown"
        handler={[Function]}
      />
    </Modal>
  </div>
</Page>
`;

exports[`Page: SummaryPage should render upgrade on free plan 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <div>
    <Component
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
    />
    <Component
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
    />
    <Panel
      accent={true}
      title="Plan Overview"
    >
      <Panel.Section
        actions={
          Array [
            Object {
              "Component": [Function],
              "content": "Upgrade Now",
              "to": "/account/billing/plan",
            },
          ]
        }
      >
        <PlanSummary
          label="Your Plan"
          plan={
            Object {
              "isFree": true,
            }
          }
        />
      </Panel.Section>
    </Panel>
    <Component />
    <Component />
    <Modal
      open={false}
    >
      <WindowEvent
        event="keydown"
        handler={[Function]}
      />
    </Modal>
  </div>
</Page>
`;
